--- a/autotest/templates/login.html
+++ b/autotest/templates/login.html
@@ -51,7 +51,7 @@
                     <button type="submit" class="btn btn-primary btn-block"> Login </button>
                     {% for message in messages %}
                     <div class="signup-link">
-                      <font color="red">{{ message }}</font>
+                      <code>{{ message }}</code>
                     </div>
                     {% endfor %}
                   </form>
